IDEA-392868 [java]: cleanup
GitOrigin-RevId: 96080c9b923b59ece96bbd5871eb951f60c2c337